<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Periodic Table 2021</string>
    <string name="periodic_table_2021">Periodic Table 2021</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="latin_name">Latin name:</string>
    <string name="english_name">English name:</string>
    <string name="year_of_discovery">Year of discovery:</string>
    <string name="discoverer">Discoverer:</string>
    <string name="cas_number">CAS number:</string>
    <string name="properties">Properties</string>
    <string name="atomic_number_z">Atomic Number (Z):</string>
    <string name="period_group">Period/Group:</string>
    <string name="block">Block:</string>
    <string name="element_category">Element category:</string>
    <string name="atomic_properties">Atomic properties</string>
    <string name="number_of_protons">Number of protons:</string>
    <string name="number_of_electrons">Number of electrons:</string>
    <string name="number_of_neutrons">Number of neutrons:</string>
    <string name="atomic_weight">Atomic weight:</string>
    <string name="electronic_configuration">Electronic configuration:</string>
    <string name="electron_shell">Electron shell:</string>
    <string name="ion_charge">Ion charge:</string>
    <string name="oxidation_state">Oxidation state:</string>
    <string name="atomic_radius">Atomic radius:</string>
    <string name="covalent_radius">Covalent radius:</string>
    <string name="van_der_waals_radius">Van der waals radius:</string>
    <string name="density">Density:</string>
    <string name="physical_state">Physical State:</string>
    <string name="color">Color:</string>
    <string name="melting_point_i_s_u">Melting point (I.S.U):</string>
    <string name="boiling_point_i_s_u">Boiling point (I.S.U):</string>
    <string name="reactivity">Reactivity</string>
    <string name="electronegativity_pauling_scale">Electronegativity (Pauling scale):</string>
    <string name="valence">Valence:</string>
    <string name="electron_affinity">Electron affinity:</string>
    <string name="thermodynamic_properties">Thermodynamic properties</string>
    <string name="fusion_heat">Fusion heat:</string>
    <string name="specific_heat">Specific heat:</string>
    <string name="vaporization_heat">Vaporization heat:</string>
    <string name="electromagnetic_properties">Electromagnetic properties</string>
    <string name="electrical_conductivity">Electrical conductivity:</string>
    <string name="electrical_type">Electrical type:</string>
    <string name="magnetic_type">Magnetic type:</string>
    <string name="molar_magnetic_susceptibility">Molar magnetic susceptibility:</string>
    <string name="mass_magnetic_susceptibility">Mass magnetic susceptibility:</string>
    <string name="volume_magnetic_susceptibility">Volume magnetic susceptibility:</string>
    <string name="resistivity">Resistivity:</string>
    <string name="abundances">Abundances</string>
    <string name="in_universe">% in universe:</string>
    <string name="in_sun">% in sun:</string>
    <string name="in_meteorites">% in meteorites:</string>
    <string name="in_earth_s_crust">% in earth\'s crust:</string>
    <string name="in_oceans">% in oceans:</string>
    <string name="in_human_body">% in human body:</string>
    <string name="nuclear_properties">Nuclear properties</string>
    <string name="radioactive">Radioactive:</string>
    <string name="half_life_time">Half life time:</string>
    <string name="decay_mode">Decay mode:</string>
    <string name="unknown">N/A</string>
    <string name="named_by">Named by:</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="short_electronic_configuration">Short electronic configuration</string>
    <string name="title_activity_scrolling2">ScrollingActivity2</string>
    <string name="alkali_metals_alkaline_earth_metals_transition_metals_post_transition_metals_metalloids_non_metals_halogens_noble_gas_lanthanides_actinoides">Alkali metals, Alkaline earth metals, Transition metals, Post transition metals, Metalloids, Non metals, Halogens, Noble gas, Lanthanides, Actinoides</string>
    <string name="periodic_table_2021_is_a_complete_offline_free_application_for_android_to_give_you_all_the_properties_photos_and_uses_of_all_elements">Periodic table 2021 is a complete offline free application for android to give you all the properties, photos and uses of all elements</string>
    <string name="how_to_use">How to use</string>
    <string name="any_element_you_click_on_it_the_app_will_display_all_the_properties_information_uses_and_photos_for_it">- Any element you click on it the app will display all the properties, information, uses and photos for it.</string>
    <string name="for_more_information_there_is_a_direct_link_in_the_page_of_all_elements_to_wikipedia">- For more information, there is a direct link in the page of all elements to Wikipedia.</string>
    <string name="when_you_pressed_a_long_press_on_any_element_it_s_photo_will_appear">- when you pressed a long press on any element it’s photo will appear.</string>
    <string name="you_can_search_for_all_elements_or_browsing_all_elements_by_alphabetical_order">- You can search for all elements Or Browsing all elements by alphabetical order.</string>
    <string name="the_elements_is_sorted_in_10_categories">- The elements is sorted in 10 categories:</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="copyrights_2021">Copyrights 2021 ©</string>
    <string name="send_us_your_feedback">Send us your feedback !</string>
    <string name="found_a_bug_have_a_problem_have_a_suggestion_improvement_fill_out_the_form_below_and_we_ll_take_a_look">Found a bug? Have a problem? Have a suggestion improvement? Fill out the form below and we’ll take a look.</string>
    <string name="subject">Subject</string>
    <string name="your_message">Your message</string>
    <string name="send">Send</string>
    <string name="appearance">Appearance</string>
    <string name="night_view">Night view</string>
    <string name="change_application_theme_to_night_view">Change application theme to night view</string>
    <string name="text_size">Text size</string>
    <string name="change_the_text_size_of_elements">Change the text size of elements</string>
    <string name="extra">Extra</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="report_any_problem_to_make_the_ap_better">Report any problem to make the ap better</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="may_be_a_new_updates_with_new_features_and_information_for_elements">May be a new updates with new features and information for elements</string>
    <string name="description">Description</string>
    <string name="name">Name:</string>
    <string name="atomic_weight_1_00794">Atomic weight: 1.00794</string>
    <string name="cas_no_1333_74_0">CAS No.: 1333–74–0</string>
    <string name="electron_shell_1">Electron Shell: 1</string>
    <string name="category_non_metals">Category: Non-metals</string>
    <string name="main_transition_metals">Main transition metals</string>
    <string name="post_transition_metals">Post transition metals</string>
    <string name="lanthanides">Lanthanides</string>
    <string name="actinides">Actinides</string>
    <string name="all">All</string>
    <string name="banner_ad_unit_id">ca-app-pub-3302117490032015/4841731903</string>
    <string name="alkali_metals">Alkali metals</string>
    <string name="non_metals">Non metals</string>
    <string name="halogens">Halogens</string>
    <string name="metalloids">Metalloids</string>
    <string name="noble_gases">Noble gases</string>
    <string name="lithium">Lithium</string>
    <string name="hydrogen">Hydrogen</string>
    <string name="beryllium">Beryllium</string>
    <string name="boron">Boron</string>
    <string name="carbon">Carbon</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="oxygen">Oxygen</string>
    <string name="fluorine">Fluorine</string>
    <string name="neon">Neon</string>
    <string name="sodium">Sodium</string>
    <string name="magnesium">Magnesium</string>
    <string name="aluminium">Aluminium</string>
    <string name="silicon">Silicon</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="sulfur">Sulfur</string>
    <string name="chlorine">Chlorine</string>
    <string name="argon">Argon</string>
    <string name="potassium">Potassium</string>
    <string name="calcium">Calcium</string>
    <string name="scandium">Scandium</string>
    <string name="titanium">Titanium</string>
    <string name="vanadium">Vanadium</string>
    <string name="chromium">Chromium</string>
    <string name="manganese">Manganese</string>
    <string name="iron">Iron</string>
    <string name="cobalt">Cobalt</string>
    <string name="nickel">Nickel</string>
    <string name="copper">Copper</string>
    <string name="zinc">Zinc</string>
    <string name="gallium">Gallium</string>
    <string name="germanium">Germanium</string>
    <string name="arsenic">Arsenic</string>
    <string name="selenium">Selenium</string>
    <string name="bromine">Bromine</string>
    <string name="krypton">Krypton</string>
    <string name="rubidium">Rubidium</string>
    <string name="strontium">Strontium</string>
    <string name="yttrium">Yttrium</string>
    <string name="zirconium">Zirconium</string>
    <string name="niobium">Niobium</string>
    <string name="molybdenum">Molybdenum</string>
    <string name="technetium">Technetium</string>
    <string name="ruthenium">Ruthenium</string>
    <string name="rhodium">Rhodium</string>
    <string name="palladium">Palladium</string>
    <string name="silver">Silver</string>
    <string name="cadmium">Cadmium</string>
    <string name="indium">Indium</string>
    <string name="tin">Tin</string>
    <string name="antimony">Antimony</string>
    <string name="tellurium">Tellurium</string>
    <string name="iodine">Iodine</string>
    <string name="xenon">Xenon</string>
    <string name="cesium">Cesium</string>
    <string name="barium">Barium</string>
    <string name="hafnium">Hafnium</string>
    <string name="tantalum">Tantalum</string>
    <string name="tungsten">Tungsten</string>
    <string name="rhenium">Rhenium</string>
    <string name="osmium">Osmium</string>
    <string name="iridium">Iridium</string>
    <string name="textview">TextView</string>
    <string name="atomic_no_118">atomic_no_118</string>
    <string name="dictionary">Dictionary</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="rate_app">Rate app</string>
    <string name="other">Other</string>
    <string name="exit">Exit</string>
    <string name="like_our_app">Your opinion matter to us!</string>
    <string name="please_take_a_moment_to_rate_it_or_share_your_feedback_with_us">Please take a moment to rate it or share your feedback with us</string>
    <string name="rate_us">Rate us</string>
    <string name="type_of_message">Type of message</string>
    <string name="message">Message</string>
    <string name="your_e_mail_optional">Your e-mail (Optional)</string>
    <string name="we_will_e_mail_you_directly_if_we_need_more_details_about_an_issue_in_order_to_fix_it">We will e-mail you directly if we need more details about an issue in order to fix it.</string>
</resources>