<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:background="?attr/background_lite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/name"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hydrogen"
            android:textColor="?attr/text_color"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:cardCornerRadius="12dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center" >

            <com.wajahatkarim3.easyflipview.EasyFlipView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageViewEasy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/imageViewEasy2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="ContentDescription" />

            </com.wajahatkarim3.easyflipview.EasyFlipView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:textSize="16sp"
            android:textColor="?attr/text_color"
            android:id="@+id/atomic_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atomic_weight_1_00794"/>

        <TextView
            android:textSize="16sp"
            android:id="@+id/CAS_no"
            android:textColor="?attr/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cas_no_1333_74_0"/>

        <TextView
            android:textSize="16sp"
            android:textColor="?attr/text_color"
            android:id="@+id/electron_shell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electron_shell_1"/>

        <TextView
            android:textSize="16sp"
            android:id="@+id/category"
            android:textColor="?attr/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_non_metals"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>